# Revenant

./: CMakeLists.txt  README.md
lib/: CGameWorld.cpp  CGameWorld.h  CPed.cpp  CPed.h  CPedHeadBlendData.cpp  CPedHeadBlendData.h  CTaskDataInfo.cpp  CTaskDataInfo.h  Natives.cpp  Natives.h  Utils.cpp  Utils.h  atArray.cpp  atArray.h  atRTTI.cpp  atRTTI.h  fwExtension.cpp  fwExtension.h  fwScriptGuid.cpp  fwScriptGuid.h  rage.cpp  rage.h  strPackfileManager.cpp  strPackfileManager.h  sysAllocator.cpp  sysAllocator.h
src/: Script.cpp  Script.h  dllmain.cpp  revenant_pch.cpp  revenant_pch.h
src/GTA/entities/: Entity.cpp  Entity.h
src/GTA/entities/peds/: Ped.cpp  Ped.h
